--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script data-name="BMC-Widget"
+          unsafe-inline
           src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
           data-id="AstralJaeger"
           data-description="Support me on Buy me a coffee!"
