--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="propeller" content="a065c165c3788ec333c5d42055c4fc3c">
   <title>GenshinCalculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
