Remove PropellerAds tag, add Media.net tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="propeller" content="a065c165c3788ec333c5d42055c4fc3c">
   <title>GenshinCalculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +9,24 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script data-ad-client="ca-pub-9193655233053595" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script type="text/javascript">
+    window._mNHandle = window._mNHandle || {};
+    window._mNHandle.queue = window._mNHandle.queue || [];
+    medianet_versionId = "3121199";
+  </script>
+  <script src="https://contextual.media.net/dmedianet.js?cid=8CUT1E86C" async="async"></script>
 </head>
 <body class="mat-typography">
+  <div id="512450814">
+    <script type="text/javascript">
+      try {
+        window._mNHandle.queue.push(function (){
+          window._mNDetails.loadTag("512450814", "970x90", "512450814");
+        });
+      }
+      catch (error) {}
+    </script>
+  </div>
   <app-root></app-root>
   <script data-name="BMC-Widget"
           unsafe-inline
