--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>GenshinCalculator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link id="appIcon" rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script data-ad-client="ca-pub-9193655233053595" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
